# spring-car-demo

./: README.md  build-front.sh  build-media.sh  build-ui.sh  build-vehicle.sh  build.sh
media-service/: pom.xml
media-service/src/main/java/com/unim/cardemo/media_service/: KafkaConfig.java  MediaController.java  MediaService.java  MediaServiceApplication.java  MediaServiceConfig.java  PlayList.java  Song.java  SongTextLine.java
media-service/src/main/java/com/unim/cardemo/media_service/db/: MediaServiceMango.java  MediaServiceSQL.java
media-service/src/main/java/com/unim/cardemo/media_service/entity/: MediaConfig.java  PlayList.java  PlayerState.java  Song.java  SongTextLine.java
media-service/src/main/resources/: application.properties
media-service/src/test/java/com/unim/cardemo/media_service/: MediaServiceApplicationTests.java
model/uml/: SWA_Collaboration.puml  SWA_Overview.puml
qt-car-backend/: .gitignore  CMakeLists.txt
qt-car-backend/inc/: Log.h  MainWindow.h
qt-car-backend/src/: MainWindow.cpp  main.cpp
ui-front/: package-lock.json  package.json
ui-front/public/: index.html
ui-front/src/: App.css  MediaApp.js  VehicleApp.js  index.js
ui-service/: pom.xml
ui-service/src/main/java/com/unim/cardemo/ui_service/: UIController.java  UIServiceConfig.java  UiServiceApplication.java
ui-service/src/main/resources/: application.properties
ui-service/src/main/resources/static/css/: car_demo.css
ui-service/src/main/resources/static/js/: car_demo.js
ui-service/src/main/resources/templates/: index.html
ui-service/src/test/java/com/unim/cardemo/ui_service/: UiServiceApplicationTests.java
vehicle-service/: pom.xml
vehicle-service/src/main/java/com/unim/cardemo/vehicle_service/: KafkaConfig.java  VehicleService.java  VehicleServiceApplication.java  VehicleServiceConfig.java  VehicleWebSocketHandler.java  WebSocketConfig.java
vehicle-service/src/main/resources/: application.properties
vehicle-service/src/test/java/com/unim/cardemo/vehicle_service/: VehicleServiceApplicationTests.java
